# pater

./: AGENTS.md  BETA_ROLLOUT.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: docs-pages.yml  tests.yml
docs/: book.toml
docs/contracts/: README.md  capabilities.schema.json  ensure.schema.json  plan.schema.json  policy-eval.schema.json  recommend.schema.json
docs/src/: SUMMARY.md  index.md
docs/src/commands/: admin.md  index.md  lifecycle.md
docs/src/getting-started/: first-workflow.md  index.md  installation.md
docs/src/guide/: architecture.md  dev-maintainer-workflows.md  docs-maintenance.md  index.md  testing.md
docs/src/operations/: ci-quality-gates.md  index.md  publishing-docs.md
docs/src/reference/: adapters.md  agent-cli-integration.md  index.md  json-contracts.md  policy-and-trust.md
examples/: policy-safe-default.toml
packaging/homebrew/: pater.rb
packaging/winget/: README.md
scripts/: install.ps1  install.sh
src/: cli.rs  main.rs  rack.rs
src/commands/: README.md  admin.rs  mod.rs  runtime.rs
src/domain/: README.md  constants.rs  mod.rs  models.rs
src/services/: README.md  adapters.rs  authoring.rs  marketplace.rs  mod.rs  output.rs  policy.rs  rack_ops.rs  release_check.rs  storage.rs  trust.rs
tests/: cli.rs  cli_command_matrix.rs  contracts_check.py  contracts_check.rs  e2e_flows.rs
tests/common/: mod.rs
