[package]
name = "pater"
version = "0.1.0"
edition = "2021"
description = "CLI for Paternoster Rack skill discovery and agent hooks"
license = "MIT"
repository = "https://github.com/paternosterrack/pater"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

