[package]
name = "pater"
version = "0.2.0"
edition = "2021"
description = "CLI for Paternoster Rack skill discovery and agent hooks"
license = "MIT"
repository = "https://github.com/paternosterrack/pater"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
ed25519-dalek = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
jsonschema = "0.18"
